--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "reddit-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec \"tsc && node dist/index.js\"",
     "build": "tsc",
-    "start": "node dist/src/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
